update fitur tugas dan quiz

--- a/detail_courses3.html
+++ b/detail_courses3.html
@@ -108,6 +108,18 @@
                                     <p>Tugas 1 - Pendahuluan Desain Web</p>
                                 </a>
                             </div>
+                            <div class="kotak_wrapper3">
+                                <h3>HTML, styling, CSS</h3>
+                                <a href="https://kawanda.unej.ac.id/s/stXnnBFB7mgbL9C" style="color: black;">
+                                    <p>PPT 1</p>
+                                </a>
+                                <a href="https://kawanda.unej.ac.id/s/Y6F45XxgZ9CrCZq" style="color: black;">
+                                    <p>PPT 2</p>
+                                </a>
+                                <a href="quiz.html" style="color: black;">
+                                    <p>Quiz 1</p>
+                                </a>
+                            </div>
                             <br>
                             <text>Tampilkan :</text>
                             <select class="select_fl">
