--- a/quiz.html
+++ b/quiz.html
@@ -75,46 +75,31 @@
 
     <div class="main-body">
         <div id="wrapper">
-            <text id="jdl">Tugas</text>
+            <text id="jdl">Quiz</text>
             <div id="isi_wrapper" class="baris">
                 <div class="kol-8">
                     <div class="kotak_wrapper">
-                        <text style="color: white; font-size: x-large;"><b>Tugas 1 - Pendahuluan Desain Web</b></text>
+                        <text style="color: white; font-size: x-large;"><b>Quiz 1</b></text>
                         <a href="detail_courses3.html"><button class="buttont default" id="btntmbh" >Kembali</button></a>
                         <br><br>
                         <div class="kotak_wrapper2">
-                            <p>masing-masing mahasiswa membuat 5 soal beserta jawaban. <br>soal dapat berupa pilihan ganda ataupun isian. <br>soal dibuat berdasarkan materi yang telah diajarkan atau topik-topik lain yang memiliki korelasi dengan materi yang
-                                sudah diajarkan. <br> jika ada mahasiswa yang membuat soal sama persis dengan mahasiswa lain, maka mahasiswa yang lebih awal submit yang akan dianggap mengerjakan soal tersebut. <br> jika kesulitan mencari ide soal, usahakan
-                                buat variasi dari yang lain agar tidak sama. <br> <a href="https://kawanda.unej.ac.id/s/masiPZQcKtEQsPc">NOTE.</a>
+                            <p style="text-align: center;">Kuis ini ditutup pada hari Selasa, 17 September 2019, 07.51 AM
+                                <br> Batas Waktu: 15 menit
+                                <br>Metode Penilaian: Nilai tertinggi
                             </p>
                             <div class="kotak_wrapper3">
-                                <text style="font-size: x-large;"><b>Status pengiriman</b></text>
+                                <text style="font-size: x-large;"><b>Ringkasan dari upaya kamu sebelumnya</b></text>
                                 <br><br>
                                 <table style="width:100%; text-align: left;">
                                     <tr>
-                                        <th>Status pengiriman</th>
-                                        <th>Dikumpulkan untuk dinilai</th>
+                                        <th>Upaya</th>
+                                        <th>Status</th>
                                     </tr>
                                     <tr>
-                                        <td>Status penilaian</td>
-                                        <td>Belum dinilai</td>
+                                        <td>1</td>
+                                        <td>Selesai <br> Diserahkan Selasa, 17 September 2019, 07.46 AM</td>
                                     </tr>
-                                    <tr>
-                                        <th>Batas waktu</th>
-                                        <th>Rabu, 11 September 2019, 11.00 PM</th>
-                                    </tr>
-                                    <tr>
-                                        <td>Waktu yang tersisa</td>
-                                        <td>Tugas diserahkan 7 menit 33 detik lebih awal</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Terakhir diubah</th>
-                                        <th>Rabu, 11 September 2019, 11.13 PM</th>
-                                    </tr>
-                                    <tr>
-                                        <td>Pengiriman file</td>
-                                        <td><a href="https://e-learning.unej.ac.id/pluginfile.php/1176829/assignsubmission_file/submission_files/997799/162410101132_Habibullah%20DM_Tugas%201.docx?forcedownload=1">162410101132_Habibullah DM_Tugas 1.docx</a>                                            11 September 2019, 11.13 PM</td>
-                                    </tr>
+
                                 </table>
                             </div>
 
@@ -124,7 +109,6 @@
                                     <option value="fl2">PPT - Pendahuluan Desain Web</option>
                                     <option value="fl3"> Quiz 1</option>
                                   </select>
-                            <a href="quiz.html" style="float: right;">Quiz 1 <i class="fa fa-caret-right"></i></a>
                         </div>
                     </div>
                 </div>
