--- a/dashboardAdmin.html
+++ b/dashboardAdmin.html
@@ -137,7 +137,7 @@
                 </div>
                 <div class="kol-4">
                     <div id="kanan1" class="kotak_wrapper">
-                        <p class="baris" id="db"><b><a href="dashboard.html">Dasbor</a></b></p>
+                        <p class="baris" id="db"><b><a href="dashboardAdmin.html">Dasbor</a></b></p>
                         <p class="baris"><a href="index.html">Beranda Situs</a></p>
                         <p class="baris">Kalender</p>
                         <p class="baris">Kursus yang ada</p>
