--- a/contact.html
+++ b/contact.html
@@ -53,19 +53,44 @@
             border-radius: 6px;
             font-size: 18px;
         }
+        
+        input {
+            width: 50%;
+            margin-bottom: 20px;
+            border: 1px solid black;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 6px;
+        }
     </style>
 </head>
 
 <body>
     <div class="header">
         <a href="index.html"><img src="image/logo t.png" style="width:11%"></a>
-        <a class="button info" style="float: right;" onclick="href='login.html'">Masuk</a>
+        <a id="btnModal" class="button info" style="float: right;"><i class="fas fa-sign-in-alt"></i> Masuk</a>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <form>
+                    <div id="judul_form">
+                        <h2>Masuk</h2>
+                    </div>
+                    <input type="text" name="usname" placeholder="Username" autofocus="" required><br>
+                    <input type="password" name="pass" placeholder="Password" required><br>
+                </form>
+                <div id="div_register">
+                    <a id="btn_masuk" class="button info">Masuk</a>
+                    <a href="forget_pass.html" class="button danger">Lupa Password</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="navbar">
-        <a href="index.html"><img src="icon/home.png" style="width:69%"></a>
-        <a href="javascript:void(0)">Kursus Saya</a>
-        <a href="about.html">Tentang</a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
+        <a href="javascript:void(0)"><i class="fas fa-book"></i> Kursus Saya</a>
+        <a href="about.html"><i class="fas fa-exclamation-circle"></i> Tentang</a>
         <div class="dropdown">
             <button class="dropbtn">Indonesia
                 <i class="fa fa-caret-down"></i>
@@ -83,14 +108,14 @@
             <div id="isi_wrapper" class="baris">
                 <div class="kol-4">
                     <div id="alamat" class="kotak_wrapper">
-                        <h3>Alamat</h3>
+                        <h3><i class="fas fa-home"></i> Alamat</h3>
                         <p>
                             Jl Yang Benar no.100, Perum. Budidaya, Sumbersari 163002, Jember, Jawa Timur
                         </p>
                     </div>
 
                     <div id="kontak" class="kotak_wrapper">
-                        <h3>Kontak</h3>
+                        <h3><i class="fas fa-address-book"></i> Kontak</h3>
 
                         Hubungi kami melalui:
                         <p class="baris">
@@ -116,7 +141,7 @@
 
                 <div class="kol-8">
                     <div id="tanya" class="kotak_wrapper">
-                        <h3>Tanyakan</h3>
+                        <h3><i class="fas fa-question"></i> Tanyakan</h3>
                         <p>
                             Jika terdapat pertanyaan seputar MediaBelajar, silahkan isi formulir di bawah ini
                         </p>
@@ -177,6 +202,21 @@
     <script src="js/navbar.js"></script>
     <script src="js/slideshow.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/modal.js"></script>
+    <script type="text/javascript">
+        $("#btn_masuk").click(function(event) {
+            event.preventDefault();
+            var usname = $("input[name='usname']").val();
+            var pass = $("input[name='pass']").val();
+            if (usname == "" || pass == "") {
+                alert('Harap isi username dan password untuk login');
+            } else if (usname == "admin" && pass == "admin") {
+                document.location.href = "dashboardAdmin.html";
+            } else {
+                document.location.href = "dashboard.html";
+            }
+        });
+    </script>
 </body>
 
 </html>
