--- a/courses_teknik.html
+++ b/courses_teknik.html
@@ -53,19 +53,44 @@
             border-radius: 6px;
             font-size: 18px;
         }
+        
+        input {
+            width: 50%;
+            margin-bottom: 20px;
+            border: 1px solid black;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 6px;
+        }
     </style>
 </head>
 
 <body>
     <div class="header">
         <a href="index.html"><img src="image/logo t.png" style="width:11%"></a>
-        <a class="button info" style="float: right;" onclick="href='login.html'">Masuk</a>
+        <a id="btnModal" class="button info" style="float: right;"><i class="fas fa-sign-in-alt"></i> Masuk</a>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <form>
+                    <div id="judul_form">
+                        <h2>Masuk</h2>
+                    </div>
+                    <input type="text" name="usname" placeholder="Username" autofocus="" required><br>
+                    <input type="password" name="pass" placeholder="Password" required><br>
+                </form>
+                <div id="div_register">
+                    <a id="btn_masuk" class="button info">Masuk</a>
+                    <a href="forget_pass.html" class="button danger">Lupa Password</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="navbar">
-        <a href="index.html"><img src="icon/home.png" style="width:69%"></a>
-        <a class="active" href="javascript:void(0)">Kursus Saya</a>
-        <a href="about.html">Tentang</a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
+        <a class="active" href="javascript:void(0)"><i class="fas fa-book"></i> Kursus Saya</a>
+        <a href="about.html"><i class="fas fa-exclamation-circle"></i> Tentang</a>
         <div class="dropdown">
             <button class="dropbtn">Indonesia
                 <i class="fa fa-caret-down"></i>
@@ -113,13 +138,13 @@
                             </div>
                             <br><br>
                             <div class="kotak_wrapper3">
-                                <text>Kalkulus 1</text>
+                                <h3>Kalkulus 1</h3>
                             </div>
                             <div class="kotak_wrapper3">
-                                <text>Kalkulus 2</text>
+                                <h3>Kalkulus 2</h3>
                             </div>
                             <div class="kotak_wrapper3">
-                                <text>Teknik Robotika dan Vision</text>
+                                <h3>Teknik Robotika dan Vision</h3>
                             </div>
                         </div>
                     </div>
@@ -127,7 +152,7 @@
                 <div class="kol-4">
                     <div id="kanan1" class="kotak_wrapper">
                         <a href="index.html">
-                            <h3>Depan</h3>
+                            <h3><i class="fas fa-home"></i> Depan</h3>
                         </a>
                     </div>
                 </div>
@@ -168,6 +193,21 @@
     <script src="js/navbar.js "></script>
     <script src="js/slideshow.js "></script>
     <script src="js/jquery-3.4.1.min.js "></script>
+    <script src="js/modal.js"></script>
+    <script type="text/javascript">
+        $("#btn_masuk").click(function(event) {
+            event.preventDefault();
+            var usname = $("input[name='usname']").val();
+            var pass = $("input[name='pass']").val();
+            if (usname == "" || pass == "") {
+                alert('Harap isi username dan password untuk login');
+            } else if (usname == "admin" && pass == "admin") {
+                document.location.href = "dashboardAdmin.html";
+            } else {
+                document.location.href = "dashboard.html";
+            }
+        });
+    </script>
 </body>
 
 </html>
