--- a/forget_pass.html
+++ b/forget_pass.html
@@ -30,25 +30,13 @@
         }
         
         input {
-            width: 95%;
+            width: 55%;
             margin-bottom: 20px;
             border: none;
             padding: 10px;
             font-size: 16px;
             border-radius: 6px;
         }
-        /* #eror_login {
-            display: none;
-            position: fixed;
-            width: 25%;
-            padding: 8px;
-            top: 15%;
-            left: 38%;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
-            font-size: 14px;
-            text-align: center;
-        } */
         
         .card {
             border-radius: 4px;
@@ -63,13 +51,13 @@
 <body>
     <div class="header">
         <a href="index.html"><img src="image/logo t.png" style="width:11%"></a>
-        <a class="button info" style="float: right;" onclick="href='login.html'">Masuk</a>
+        <a class="button info" style="float: right;" onclick="href='login.html'"><i class="fas fa-sign-in-alt"></i> Masuk</a>
     </div>
 
     <div id="navbar">
-        <a href="index.html"><img src="icon/home.png" style="width:69%"></a>
-        <a href="javascript:void(0)">Kursus Saya</a>
-        <a href="about.html">Tentang</a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
+        <a href="javascript:void(0)"><i class="fas fa-book"></i> Kursus Saya</a>
+        <a href="about.html"><i class="fas fa-exclamation-circle"></i> Tentang</a>
         <div class="dropdown">
             <button class="dropbtn">Indonesia
 				<i class="fa fa-caret-down"></i>
@@ -87,10 +75,12 @@
         <div class="card">
             <form>
                 <div id="judul_form">
-                    <h2>Perubahan Password</h2>
+                    <h3>Perubahan Password</h3>
                 </div>
-                <text>Masukkan User ID Anda (NIM/Username) :</text>
+                <text style="font-size: medium;">Masukkan User ID Anda (NIM/Username) : </text><br>
                 <input type="text" name="usname" placeholder="Username" autofocus="" required><br>
+                <text style="font-size: medium;">Masukkan Password Baru : </text><br>
+                <input type="text" name="pass" placeholder="Password" required><br>
             </form>
             <div id="div_register">
                 <a href="login.html" id="btn_forget" class="button success">Kirim</a>
@@ -136,10 +126,11 @@
         $("#btn_forget").click(function(event) {
             event.preventDefault();
             var usname = $("input[name='usname']").val();
-            if (usname == "") {
-                alert('Harap isi username');
+            var pass = $("input[name='pass']").val();
+            if (usname == "" || pass == "") {
+                alert('Harap isi username dan password baru');
             } else {
-                document.location.href = "login.html";
+                document.location.href = "index.html";
             }
         });
     </script>
