--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -34,6 +35,15 @@
         #gr-btn {
             text-align: center;
         }
+        
+        input {
+            width: 50%;
+            margin-bottom: 20px;
+            border: 1px solid black;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 6px;
+        }
     </style>
 </head>
 
@@ -41,14 +51,28 @@
 
     <div class="header">
         <a href="index.html"><img src="image/logo t.png" style="width:11%"></a>
-        <a id="logbtn" class="button info" style="float: right;" onclick="href='login.html'">Masuk</a>
+        <a id="btnModal" class="button info" style="float: right;"><i class="fas fa-sign-in-alt"></i> Masuk</a>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <form>
+                    <div id="judul_form">
+                        <h2>Masuk</h2>
+                    </div>
+                    <input type="text" name="usname" placeholder="Username" autofocus="" required><br>
+                    <input type="password" name="pass" placeholder="Password" required><br>
+                </form>
+                <div id="div_register">
+                    <a id="btn_masuk" class="button info">Masuk</a>
+                    <a href="forget_pass.html" class="button danger">Lupa Password</a>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <a href="#" id="open_menu"><i class="fas fa-bars"></i></a>
-    <div id="navbar" class="null">
-        <a class="active" href="index.html"><img src="icon/home.png" style="width:69%"></a>
-        <a href="javascript:void(0)">Kursus Saya</a>
-        <a href="about.html">Tentang</a>
+    <div id="navbar">
+        <a class="active" href="index.html"><i class="fas fa-home"></i></a>
+        <a href="javascript:void(0)"><i class="fas fa-book"></i> Kursus Saya</a>
+        <a href="about.html"><i class="fas fa-exclamation-circle"></i> Tentang</a>
         <div class="dropdown" id="drpdwn">
             <button class="dropbtn">Indonesia
                 <i class="fa fa-caret-down"></i>
@@ -148,6 +172,7 @@
         <script src="js/jquery-3.4.1.min.js"></script>
         <!-- <script src="js/navbar.js"></script> -->
         <script src="js/slideshow.js"></script>
+        <script src="js/modal.js"></script>
         <script type="text/javascript">
             $("#open_menu").click(function(event) {
                 event.preventDefault();
@@ -160,6 +185,20 @@
                     $("#drpdwn").removeClass('responsive');
                 }
             })
+        </script>
+        <script type="text/javascript">
+            $("#btn_masuk").click(function(event) {
+                event.preventDefault();
+                var usname = $("input[name='usname']").val();
+                var pass = $("input[name='pass']").val();
+                if (usname == "" || pass == "") {
+                    alert('Harap isi username dan password untuk login');
+                } else if (usname == "admin" && pass == "admin") {
+                    document.location.href = "dashboardAdmin.html";
+                } else {
+                    document.location.href = "dashboard.html";
+                }
+            });
         </script>
 </body>
 
