--- a/policy.html
+++ b/policy.html
@@ -20,19 +20,44 @@
             font-family: 'Century Gothic';
             font-size: 16px;
         }
+        
+        input {
+            width: 50%;
+            margin-bottom: 20px;
+            border: 1px solid black;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 6px;
+        }
     </style>
 </head>
 
 <body>
     <div class="header">
         <a href="index.html"><img src="image/logo t.png" style="width:11%"></a>
-        <a class="button info" style="float: right;" onclick="href='login.html'">Masuk</a>
+        <a id="btnModal" class="button info" style="float: right;"><i class="fas fa-sign-in-alt"></i> Masuk</a>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <form>
+                    <div id="judul_form">
+                        <h2>Masuk</h2>
+                    </div>
+                    <input type="text" name="usname" placeholder="Username" autofocus="" required><br>
+                    <input type="password" name="pass" placeholder="Password" required><br>
+                </form>
+                <div id="div_register">
+                    <a id="btn_masuk" class="button info">Masuk</a>
+                    <a href="forget_pass.html" class="button danger">Lupa Password</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="navbar">
-        <a href="index.html"><img src="icon/home.png" style="width:69%"></a>
-        <a href="javascript:void(0)">Kursus Saya</a>
-        <a href="about.html">Tentang</a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
+        <a href="javascript:void(0)"><i class="fas fa-book"></i> Kursus Saya</a>
+        <a href="about.html"><i class="fas fa-exclamation-circle"></i> Tentang</a>
         <div class="dropdown">
             <button class="dropbtn">Indonesia
                 <i class="fa fa-caret-down"></i>
@@ -129,6 +154,21 @@
     <script src="js/navbar.js"></script>
     <script src="js/slideshow.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/modal.js"></script>
+    <script type="text/javascript">
+        $("#btn_masuk").click(function(event) {
+            event.preventDefault();
+            var usname = $("input[name='usname']").val();
+            var pass = $("input[name='pass']").val();
+            if (usname == "" || pass == "") {
+                alert('Harap isi username dan password untuk login');
+            } else if (usname == "admin" && pass == "admin") {
+                document.location.href = "dashboardAdmin.html";
+            } else {
+                document.location.href = "dashboard.html";
+            }
+        });
+    </script>
 </body>
 
 </html>
