finishing modal, kurang ajax

--- a/about.html
+++ b/about.html
@@ -52,9 +52,10 @@
                     <input type="password" name="pass" placeholder="Password" required><br>
                 </form>
                 <div id="div_register">
-                    <a id="btn_masuk" class="button info">Masuk</a>
-                    <a href="forget_pass.html" class="button danger">Lupa Password</a>
+                    <a id="btn_masuk" class="button info"><i class="fas fa-sign-in-alt"></i> Masuk</a>
+                    <a href="forget_pass.html" class="button danger"><i class="fas fa-question-circle"></i> Lupa Password</a>
                 </div>
+                <br><br>
             </div>
         </div>
     </div>
