--- a/about_user.html
+++ b/about_user.html
@@ -32,18 +32,18 @@
     <div class="header">
         <a href="index.html"><img src="image/logo t.png" style="width:11%"></a>
         <div class="dropdown">
-            <button class="button info" id="dropbtnpf" onclick="myButton()"><img src="icon/user.png" style="width:13%"> Habibullah Dzaky M</button>
+            <button class="button info" id="dropbtnpf" onclick="myButton()"><i class="fas fa-user-circle"></i> Habibullah Dzaky M</button>
             <div class="droppf-content" id="myDropdown">
-                <a href="profil.html">Profil</a>
-                <a href="login.html">Log out</a>
+                <a href="profil.html"><i class="fas fa-user"></i> Profil</a>
+                <a href="index.html"><i class="fas fa-sign-out-alt"></i> Log out</a>
             </div>
         </div>
     </div>
 
     <div id="navbar">
-        <a href="dashboard.html"><img src="icon/home.png" style="width:69%"></a>
-        <a href="dashboard.html">Kursus Saya</a>
-        <a class="active" href="about_user.html">Tentang</a>
+        <a href="dashboard.html"><i class="fas fa-home"></i></a>
+        <a href="dashboard.html"><i class="fas fa-book"></i> Kursus Saya</a>
+        <a class="active" href="about_user.html"><i class="fas fa-exclamation-circle"></i> Tentang</a>
         <div class="dropdown">
             <button class="dropbtn">Indonesia
 				<i class="fa fa-caret-down"></i>
