--- a/profil.html
+++ b/profil.html
@@ -79,7 +79,7 @@
             <div id="isi_wrapper" class="baris">
                 <div class="kol-8">
                     <div class="kotak_wrapper">
-                        <h4 style="color: white;" id="mdl">Foto Profil</h4>
+                        <h4 style="color: white;">Foto Profil</h4>
                         <img id="profil" src="image/fotoprofil.jpg" style="width: 20%">
                         <p class="baris">Nama : Habibullah Dzaky Musthafa</p>
                         <p class="baris">Email : habibdm@ut.ac.id</p>
