finishing update ajax, shadaqallahul 'adziim

--- a/calender.html
+++ b/calender.html
@@ -237,7 +237,7 @@
                                                         <option value="59">59</option>
                                                       </select>
                                     </p>
-                                    <a href="#"><button class="buttont info" id="save_modal">Save</button></a>
+                                    <a href="#"><button class="buttont info" id="save_modal"><i class="fas fa-save"></i> Simpan</button></a>
                                 </div>
                             </div>
                             <div class="kotak_wrapper3">
