--- a/detail_courses1.html
+++ b/detail_courses1.html
@@ -70,14 +70,14 @@
                             <div class="kotak_wrapper3">
                                 <h3>Kontrak Kuliah</h3>
                             </div>
-                            <br>
-                            <text>Tampilkan :</text>
-                            <select class="select_fl">
+                        </div>
+                        <br>
+                        <text style="color: white;">Tampilkan :</text>
+                        <select class="select_tl">
                                     <option value="fl1" selected>12</option>
                                     <option value="fl2"> 24</option>
                                     <option value="fl3"> 36</option>
                                   </select>
-                        </div>
                     </div>
                 </div>
                 <div class="kol-4">
