--- a/detail_courses3.html
+++ b/detail_courses3.html
@@ -97,14 +97,14 @@
                                     <p><i class="fas fa-user-friends"></i> Kehadiran</p>
                                 </a>
                             </div>
-                            <br>
-                            <text>Tampilkan :</text>
-                            <select class="select_fl">
+                        </div>
+                        <br>
+                        <text style="color: white;">Tampilkan :</text>
+                        <select class="select_tl">
                                     <option value="fl1" selected>12</option>
                                     <option value="fl2"> 24</option>
                                     <option value="fl3"> 36</option>
                                   </select>
-                        </div>
                     </div>
                 </div>
                 <div class="kol-4">
