--- a/participants.html
+++ b/participants.html
@@ -104,15 +104,14 @@
 
                                 </table>
                             </div>
-
-                            <br>
-                            <text>Tampilkan :</text>
-                            <select class="select_fl">
+                        </div>
+                        <br>
+                        <text style="color: white;">Tampilkan :</text>
+                        <select class="select_tl">
                                     <option value="fl1" selected>12</option>
                                     <option value="fl2"> 24</option>
                                     <option value="fl3"> 36</option>
                                   </select>
-                        </div>
                     </div>
                 </div>
                 <div class="kol-4">
