Finishing, mau maju ke pak zarkasi

--- a/dashboardAdmin.html
+++ b/dashboardAdmin.html
@@ -12,9 +12,6 @@
     <link rel="stylesheet" type="text/css" href="font-awesome/css/fontawesome.css">
     <link rel="stylesheet" type="text/css" href="font-awesome/css/solid.css">
     <link rel="stylesheet" type="text/css" href="font-awesome/css/brands.css">
-    <style type="text/css">
-
-    </style>
 </head>
 
 <body>
@@ -74,7 +71,7 @@
                                     <option value="f11">FEB </option>
                                     <option value="f12">FISIP </option>
                                   </select></p>
-                                <a href="#"><button class="button info" id="save_modal"><i class="fas fa-save"></i> Simpan</button></a>
+                                <a href="#"><button class="buttont info" id="save_modal"><i class="fas fa-save"></i> Simpan</button></a>
                             </div>
                         </div>
                         <div class="kotak_wrapper2" id="list_matkul" page="">
