--- a/index.html
+++ b/index.html
@@ -35,15 +35,6 @@
         #gr-btn {
             text-align: center;
         }
-        
-        input {
-            width: 50%;
-            margin-bottom: 20px;
-            border: 1px solid black;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 6px;
-        }
     </style>
 </head>
 
@@ -59,8 +50,8 @@
                     <div id="judul_form">
                         <h2>Masuk</h2>
                     </div>
-                    <input type="text" name="usname" placeholder="Username" autofocus="" required><br>
-                    <input type="password" name="pass" placeholder="Password" required><br>
+                    <input id="login" type="text" name="usname" placeholder="Username" autofocus="" required><br>
+                    <input id="login" type="password" name="pass" placeholder="Password" required><br>
                 </form>
                 <div id="div_register">
                     <a id="btn_masuk" class="button info"><i class="fas fa-sign-in-alt"></i> Masuk</a>
