--- a/about.html
+++ b/about.html
@@ -24,15 +24,6 @@
             padding: 10px;
             font-family: 'Century Gothic';
         }
-        
-        input {
-            width: 50%;
-            margin-bottom: 20px;
-            border: 1px solid black;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 6px;
-        }
     </style>
 </head>
 
@@ -48,8 +39,8 @@
                     <div id="judul_form">
                         <h2>Masuk</h2>
                     </div>
-                    <input type="text" name="usname" placeholder="Username" autofocus="" required><br>
-                    <input type="password" name="pass" placeholder="Password" required><br>
+                    <input id="login" type="text" name="usname" placeholder="Username" autofocus="" required><br>
+                    <input id="login" type="password" name="pass" placeholder="Password" required><br>
                 </form>
                 <div id="div_register">
                     <a id="btn_masuk" class="button info"><i class="fas fa-sign-in-alt"></i> Masuk</a>
