--- a/courses.html
+++ b/courses.html
@@ -12,16 +12,6 @@
     <link rel="stylesheet" type="text/css" href="font-awesome/css/fontawesome.css">
     <link rel="stylesheet" type="text/css" href="font-awesome/css/solid.css">
     <link rel="stylesheet" type="text/css" href="font-awesome/css/brands.css">
-    <style type="text/css">
-        input {
-            width: 50%;
-            margin-bottom: 20px;
-            border: 1px solid black;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 6px;
-        }
-    </style>
 </head>
 
 <body>
@@ -35,8 +25,8 @@
                     <div id="judul_form">
                         <h2>Masuk</h2>
                     </div>
-                    <input type="text" name="usname" placeholder="Username" autofocus="" required><br>
-                    <input type="password" name="pass" placeholder="Password" required><br>
+                    <input id="login" type="text" name="usname" placeholder="Username" autofocus="" required><br>
+                    <input id="login" type="password" name="pass" placeholder="Password" required><br>
                 </form>
                 <div id="div_register">
                     <a id="btn_masuk" class="button info"><i class="fas fa-sign-in-alt"></i> Masuk</a>
